added new package storage/author and handlers/author
