# models/author.go
@@ -4,9 +4,9 @@ import "time"
 
 //Author...
 type Author struct{
-	Id string `json:"id"`
+	Id 		  string `json:"id"`
 	Firstname string  `json:"firstname" binding:"required" minLength:"2" maxLength:"50" example:"John"`
-	Lastname string  `json:"lastname" binding:"required" minLength:"2" maxLength:"50" example:"Doe"`
+	Lastname  string  `json:"lastname" binding:"required" minLength:"2" maxLength:"50" example:"Doe"`
 	CreatedAt time.Time `json:"created_at"`
 	UpdateAt *time.Time `json:"updated_at"`
 	DeleteAt *time.Time `json:"-"`
@@ -14,6 +14,12 @@ type Author struct{
 
 type CreateAuthorModel struct{
 	Firstname string  `json:"firstname" binding:"required" minLength:"2" maxLength:"50" example:"John"`
-	Lastname string  `json:"lastname" binding:"required" minLength:"2" maxLength:"50" example:"Doe"`
+	Lastname  string  `json:"lastname" binding:"required" minLength:"2" maxLength:"50" example:"Doe"`
+
+}
+type UpdateAuthorModel struct{
+	Id 		  string `json:"id"`
+	Firstname string  `json:"firstname" binding:"required" minLength:"2" maxLength:"50" example:"John"`
+	Lastname  string  `json:"lastname" binding:"required" minLength:"2" maxLength:"50" example:"Doe"`
 
 }
